[package]
name = "basicapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["tls", "json"] }
log = "0.4.20"
serde = "1.0.130"
object = { version = "0.32.2", features = [] }
